objects/Complexity_Score_Fields__mdt.object
<CustomObject>
    <description>Metadata type used to store the Account fields that are used to calculate the Account Complexity Score.</description>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>Point value used to determine the score.</description>
        <label>Score</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValueMax__c</fullName>
        <description>Maximum value in the range</description>
        <label>ValueMax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValueMin__c</fullName>
        <description>Minimum value in the range</description>
        <label>ValueMin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Text field value</description>
        <label>Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Complexity Score Field</label>
    <pluralLabel>Complexity Score Fields</pluralLabel>
</CustomObject>